Fixed input boxes overflowing container, cleaner code for desktop sizing and increased line height.
Fixed thanks to feedback from Bert on slack.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
 
 /* Section styles */
 
+*{
+    box-sizing: border-box;
+    line-height: 1.5;
+}
+
 body{
     display:flex;
     flex-direction: column;
@@ -27,8 +32,7 @@ main{
     display: flex;
     background-color:white;
     padding: 1em;
-    box-shadow: 0 0 40px 10px #c3073fc7;
-    
+    box-shadow: 0 0 40px 10px #c3073fc7;   
 }
 
 footer{
@@ -49,8 +53,6 @@ legend{
     font-weight: bold;
 }
 
-
-
 form{
     display: flex;
     flex-direction: column;
@@ -66,9 +68,12 @@ button{
 
 ::placeholder{
     text-align: end;
-    color: rgba(0, 0, 0, 0.8);
-   
+    color: rgba(0, 0, 0, 0.8);    
 }
+
+#postcode::placeholder{
+    text-align: left;
+} 
 
 /* Class styling */
 
@@ -118,27 +123,26 @@ button{
 
 .item input,
 .item select,
-.item textarea,
-.item_postcode input{
+.item textarea{
     font-family: 'Roboto Mono', monospace;
     background-color: #e8e8e8;
     padding: 1.5em;
     margin: 1em 0;
     border-radius: 5px;
     border: none;
-    
-}
-
-.item input,
-.item select,
-.item textarea{
-    flex-basis: 100%;
+    width: 100%;    
 }
 
 
 .item_postcode input{
-    align-self: flex-start;
-    flex-basis: 20px;
+    
+    font-family: 'Roboto Mono', monospace;
+    background-color: #e8e8e8;
+    padding: 1.5em;
+    margin: 1em 0;
+    border-radius: 5px;
+    border: none;
+    width: 50%;
 }
 
 .small-break{
@@ -177,7 +181,7 @@ button{
     display: none;
    }
  
-  #thankyou:target {
+#thankyou:target {
     display: block;
     padding: 1em;
     text-align: center;
@@ -217,37 +221,34 @@ textarea[name=feedback] {
     box-sizing: border-box;
     }
 
-    .item{
-        justify-content: space-between;
-    }
-
-    .item_postcode input{
-        justify-self: flex-end;
-    }
-
     .item input,
-    .item textarea{
-        flex-basis: 65%;
+    .item textarea,
+    .item select{
+        flex-basis: 70%;
         justify-self: flex-end;    
     }
 
-    .item select{
-        flex-basis: 71.2%;
-    }
 
-    .item label,
-    .item_postcode label{
+    .item label{
         align-self: center;   
+        flex-basis: 30%;
     }
 
-    .item_postcode label{
-        margin-right: 6.3em;
+    .item_postcode input{
+        justify-self: flex-start;
+        flex-basis: 35%;
     }
+    .item_postcode label{
+        align-self: center;
+        flex-basis: 30%;
+    }
+
 
     .content{
         max-width: 768px;
         padding: 2em;
-        align-self: center;
-        
+        align-self: center;   
     }
+
+
 }
